# deepbleed

./: Cargo.toml  README.md
docs/: DECOMPILER_ANALYSIS.md
samples/: test1.c  test1.exe.decompiled.c  test1.exe.ir.json  test2.cpp  test3.cpp  test4.cpp
src/: codegen.rs  entry_hunter.rs  lifter.rs  main.rs  optimizer.rs  resolver.rs  signatures.rs  structurer.rs  types.rs
