[package]
name = "deepbleed"
version = "0.4.0"
edition = "2024"

[dependencies]
object = { version = "0.36", features = ["pe", "read"] }
zydis = { version = "4.0", features = ["full-decoder"] }
rayon = "1.10"
memmap2 = "0.9"
dashmap = "6.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fnv = "1.0"
